--- a/languages/it.po
+++ b/languages/it.po
@@ -2,74 +2,78 @@
 # Copyright (C) 2014 Patrick Murray-John
 # This file is distributed under the same license as the Omeka package.
 # Patrick Murray-John <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
+# Daniele Binaghi, 2019
+# Giorgia Menghinella <archiviofotsc@gmail.com>, 2017
+# Giorgio Comai <g@giorgiocomai.eu>, 2019
 msgid ""
 msgstr ""
-"Project-Id-Version: Locale\n"
+"Project-Id-Version: omeka-plugin-Multilanguage\n"
 "Report-Msgid-Bugs-To: http://github.com/patrickmj/Multilanguage/issues\n"
 "POT-Creation-Date: 2014-09-21 17:49-0500\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2019-09-11 11:48+0000\n"
+"Last-Translator: Daniele Binaghi\n"
+"Language-Team: Italian (http://www.transifex.com/omeka/omeka-plugin-multilanguage/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: it\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Multilanguage"
-msgstr ""
+msgstr "Multilingua"
 
 #: MultilanguagePlugin.php:56 MultilanguagePlugin.php:62
 #: views/shared/user-language/user-language.php:2
 msgid "Preferred Language"
-msgstr ""
+msgstr "Lingua preferita"
 
 #: MultilanguagePlugin.php:64
 msgid "Multilanguage Content"
-msgstr ""
+msgstr "Contenuto multilingua"
 
 #: MultilanguagePlugin.php:228
 msgid "Translate to: "
-msgstr ""
+msgstr "Traduci in:"
 
 #: config_form.php:4
 msgid "Select the languages into which your site can be translated."
-msgstr ""
+msgstr "Seleziona le lingue in cui può essere tradotto il tuo sito."
 
 #: config_form.php:41
 msgid ""
 "The languages available to translate content. To learn more about "
-"translating the core interfaces, <a href='http://omeka.org/codex/"
-"Translate_Omeka'>read this</a>."
-msgstr ""
+"translating the core interfaces, <a "
+"href='http://omeka.org/codex/Translate_Omeka'>read this</a>."
+msgstr "Lingue disponibili per tradurre i contenuti. Per scoprire di più riguardo alla traduzione delle interfacce principali, <a href='http://omeka.org/codex/Translate_Omeka'>leggi questo</a>."
 
 #: config_form.php:49
 msgid "Check the metadata fields that you want to make translatable."
-msgstr ""
+msgstr "Seleziona i campi di metadati che vuoi rendere traducibili."
 
 #: views/admin/translations/content-language.php:2
 msgid "Content Languages"
-msgstr ""
+msgstr "Lingue dei contenuti"
 
 #: views/admin/translations/content-language.php:25
 #, php-format
 msgid "Default language is %s"
-msgstr ""
+msgstr "La lingua predefinita è %s"
 
 #: views/admin/translations/content-language.php:26
 msgid "Exhibits"
-msgstr ""
+msgstr "Esposizione"
 
 #: views/admin/translations/content-language.php:43
 msgid "Simple Pages"
-msgstr ""
+msgstr "Simple Pages"
 
 #: views/shared/user-language/user-language.php:40
 msgid "Select your prefered language"
-msgstr ""
+msgstr "Scegli la tua lingua preferita"
 
 #: views/shared/user-language/user-language.php:43
 #, php-format
 msgid "The default language is %s"
-msgstr ""
+msgstr "La lingua predefinita è %s"
